@@ -27,23 +27,23 @@
  *  as a parameter of a function or method exposed by modules. This defines
  *  the necessary trait that makes the class as<>'able
  */
-#define RCPP_EXPOSED_AS(CLASS)                                         \
-    namespace Rcpp{ namespace traits{                                  \
-    template<> struct r_type_traits< CLASS* >{                         \
-        typedef r_type_module_object_pointer_tag r_category ;          \
-    } ;                                                                \
-    template<> struct r_type_traits< const CLASS* >{                   \
-        typedef r_type_module_object_const_pointer_tag r_category ;    \
-    } ;                                                                \
-    template<> struct r_type_traits< CLASS >{                          \
-        typedef r_type_module_object_tag r_category ;                  \
-    } ;                                                                \
-    template<> struct r_type_traits< CLASS& >{                         \
-        typedef r_type_module_object_reference_tag r_category ;        \
-    } ;                                                                \
-    template<> struct r_type_traits< const CLASS& >{                   \
-        typedef r_type_module_object_const_reference_tag r_category ;  \
-    } ;                                                                \
+#define RCPP_EXPOSED_AS(CLASS)                                                \
+    namespace Rcpp{ namespace traits{                                         \
+    template<> struct r_type_traits< CLASS* >{                                \
+        typedef r_type_module_object_pointer_tag r_category ;                 \
+    } ;                                                                       \
+    template<> struct r_type_traits< const CLASS* >{                          \
+        typedef r_type_module_object_const_pointer_tag r_category ;           \
+    } ;                                                                       \
+    template<> struct r_type_traits< CLASS >{                                 \
+        typedef r_type_module_object_tag r_category ;                         \
+    } ;                                                                       \
+    template<> struct r_type_traits< CLASS& >{                                \
+        typedef r_type_module_object_reference_tag r_category ;               \
+    } ;                                                                       \
+    template<> struct r_type_traits< const CLASS& >{                          \
+        typedef r_type_module_object_const_reference_tag r_category ;         \
+    } ;                                                                       \
     }}
     
 #define RCPP_EXPOSED_WRAP(CLASS) namespace Rcpp{ namespace traits{ template<> struct wrap_type_traits< CLASS >{typedef wrap_type_module_object_tag wrap_category ; } ; }}
